# pcl

./: .editorconfig
2d/include/pcl/2d/: convolution.h  edge.h  morphology.h
2d/include/pcl/2d/impl/: convolution.hpp  edge.hpp  kernel.hpp  morphology.hpp
common/include/pcl/common/: common.h  distances.h  gaussian.h  rvv_point_load.h  rvv_point_store.h
common/include/pcl/common/impl/: centroid.hpp  common.hpp  rvv_point_load.hpp  rvv_point_store.hpp
common/src/: gaussian.cpp
doc-rvv/: RISC-V PCL Cross-Compilation Guide.zh.md  RISCV Environment Setup.zh.md  RVV Supplementary.zh.md  countWithinDistanceRVV.zh.md  getAcuteAngle3DRVV.zh.md
doc-rvv/2d/: convolution.zh.md  edge.zh.md  kernel.zh.md  morphology.zh.md
doc-rvv/common/: atan2-RVV.zh.md  centroid.zh.md  common.zh.md  distances.zh.md  expf-RVV.zh.md  gaussian.zh.md  getAcuteAngle3DRVV.zh.md  module-evaluation.zh.md
doc-rvv/rvv/: Conditional Judgment.md  RVV Load Store Strategy.zh.md  RVV VLA.zh.md  Tail-Agnostic-Tail-Undisturbed.zh.md  Why vfloat32m2_t.zh.md
doc-rvv/sample_consensus/: countWithinDistanceRVV.zh.md  selectWithinDistance_getDistancesToModel_RVV.zh.md
recognition/src/face_detection/: face_detector_data_provider.cpp  rf_face_detector_trainer.cpp
registration/include/pcl/registration/impl/: ndt.hpp
sample_consensus/include/pcl/sample_consensus/: sac_model_circle.h  sac_model_normal_plane.h  sac_model_plane.h  sac_model_sphere.h
sample_consensus/include/pcl/sample_consensus/impl/: sac_model_circle.hpp  sac_model_normal_plane.hpp  sac_model_plane.hpp  sac_model_sphere.hpp  sac_model_torus.hpp
test-rvv/: .gitignore  CMakeLists.txt  Makefile  README.zh.md  Test countWithinDistanceRVV.zh.md  output.txt  test_sample_consensus_plane_models.cpp
test-rvv/2d/: Makefile  Makefile.board  README.zh.md  bench_2d.cpp  board.mk  test_2d.cpp  test_edge_store_bench.cpp
test-rvv/2d/script/: analyze_bench_compare.py  analyze_vec_log.py
test-rvv/common/centroid/: Makefile  README.zh.md  bench_centroid.cpp  board.mk  centroid-evaluation.zh.md  test_centroid.cpp
test-rvv/common/common/: Makefile  README.zh.md  atan2_test.cpp  bench_common.cpp  board.mk  expf_remez_vs_taylor.cpp  expf_test.cpp
test-rvv/common/common/script/: compare_rvv_asm.py  parms.py  parms_remez_atan.py  parms_remez_exp.py
test-rvv/common/distances/: Makefile  README.zh.md  bench_distances.cpp  bench_getmaxsegment_load_compare.cpp  board.mk  test_distances.cpp
test-rvv/common/gaussian/: Makefile  bench_gaussian.cpp  board.mk  gaussian-evaluation.zh.md  gaussian_convolve_float_local.hpp  test_gaussian.cpp  test_gaussian_convolve_compare.cpp
test-rvv/rvv/load_store/: Makefile  README.zh.md  bench_rvv_load_compare.cpp  bench_rvv_store_compare.cpp  board.mk
test-rvv/sample_consensus/: README.zh.md  Test SIMD Plane and NormalPlane.zh.md  Test SIMD_countWithinDistance RVV.zh.md
test-rvv/sample_consensus/plane_models/: CMakeLists.txt  Makefile  bench_sac_normal_plane.cpp  bench_sac_normal_plane_load_compare.cpp  board.mk  output.txt  test_sample_consensus_plane_models.cpp
test-rvv/sample_consensus/quadric_models/: CMakeLists.txt  Makefile  Makefile.board  output.txt  test_sample_consensus_quadric_models.cpp
test-rvv/script/: analyze_bench_compare.py  analyze_vec_log.py  compare_rvv_asm.py
test/sample_consensus/: test_sample_consensus_plane_models.cpp  test_sample_consensus_quadric_models.cpp
